--- a/projects.html
+++ b/projects.html
@@ -62,26 +62,27 @@
                             <div class="featured-project-2">
                                 <div class="project2-container">
                                     <div class="project-image">
-                                        <img id="project-2-image" src="./Assets/Projects/blackjack-1.png" alt="">
+                                        <img id="project-2-image" src="./Assets/Projects/gym-1.png" alt="">
                                     </div>
                                     <div class="project-container2">
                                         <div class="project-container-title">
-                                            <a href="https://foojoowee.github.io/3.0-Card-Game/" target="_blank">
-                                                <h2>Blackjack Game</h2>
+                                            <a href="https://c3883a0b.gym-website-7hl.pages.dev/" target="_blank">
+                                                <h2>Gym Website</h2>
                                             </a>
                                         </div>
                                         <div class="project-container-description">
-                                            A generic BlackJack game, including our local Malaysian style rules. Work in progress of making it multiplayer and developing a Texas Hold' Em mode! 
+                                            A professional-looking mock website built with a modern looking AI. Built using Typescript, React and TailwindCSS for styling ease. 
                                         </div>
                                         <div class="project-container-techstack">
-                                            <p>HTML/CSS</p>
-                                            <p>Javascript</p>
+                                            <p>Typescript</p>
+                                            <p>ReactJS</p>
+                                            <p>Tailwind</p>
                                         </div>
                                         <div class="project-container-icon">
-                                            <a href="https://foojoowee.github.io/3.0-Card-Game/" target="_blank">
+                                            <a href="https://c3883a0b.gym-website-7hl.pages.dev/" target="_blank">
                                                 <img src="./Assets/ICONS/icon-link.svg" alt="link">
                                             </a>
-                                            <a href="https://github.com/foojoowee/3.0-Card-Game" target="_blank">
+                                            <a href="https://github.com/foojoowee/gym-website" target="_blank">
                                                 <img src="./Assets/ICONS/icon-github-black.svg" alt="link">
                                             </a>
                                         </div>
@@ -93,6 +94,7 @@
                         <div class="other-projects">
                             <div class="other-projects-title">
                                 <h1>OTHER PROJECTS</h1>
+                                <p>(Check out my GitHub Repo for other projects)</p>
                             </div>
                             <div class="other-project-1">
                                 <div class="project-container">
@@ -209,6 +211,37 @@
                                     </div>
                                     <div class="project-image-right">
                                         <img src="./Assets/Projects/piano-1.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="other-project-5">
+                                <div class="project-container">
+                                    <div class="project-image">
+                                        <img src="./Assets/Projects/pacman-1.png" alt="">
+                                        <p class="coming-soon">COMING SOON</p>
+                                    </div>
+                                    <div class="project-container2">
+                                        <div class="project-container-title">
+                                            <a href="#" target="_blank">
+                                                <h2>Pacman Clone</h2>
+                                            </a>
+                                        </div>
+                                        <div class="other-project-container-description">
+                                            The recreational of the original Pacman using Python. Work in Progress, please check back soon!
+                                        </div>
+                                        <div class="project-container-techstack">
+                                            <p>Python</p>
+                                            <p>PyGames</p>
+                                            <p>Django</p>
+                                        </div>
+                                        <div class="project-container-icon">
+                                            <a href="#" target="_blank">
+                                                <img src="./Assets/ICONS/icon-link.svg" alt="link">
+                                            </a>
+                                            <a href="#" target="_blank">
+                                                <img src="./Assets/ICONS/icon-github-black.svg" alt="link">
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
